--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --host",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@vueuse/nuxt": "12.7.0",
     "gsap": "^3.12.5",
     "lenis": "^1.1.13",
     "nuxt": "^3.13.0",
